; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_inet_ntop.c_Curl_inet_ntop.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_inet_ntop.c_Curl_inet_ntop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EAFNOSUPPORT = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @Curl_inet_ntop(i32 %0, i8* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %10 = load i32, i32* %6, align 4
  switch i32 %10, label %16 [
    i32 129, label %11
  ]

11:                                               ; preds = %4
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = load i64, i64* %9, align 8
  %15 = call i8* @inet_ntop4(i8* %12, i8* %13, i64 %14)
  store i8* %15, i8** %5, align 8
  br label %18

16:                                               ; preds = %4
  %17 = load i32, i32* @EAFNOSUPPORT, align 4
  store i32 %17, i32* @errno, align 4
  store i8* null, i8** %5, align 8
  br label %18

18:                                               ; preds = %16, %11
  %19 = load i8*, i8** %5, align 8
  ret i8* %19
}

declare dso_local i8* @inet_ntop4(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
